--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <h4 id="Paper" style="padding-top: 70px; margin-top: -80px;">Paper</h4>
         <hr>
             <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2403.17124">
+                <a href="https://arxiv.org/abs/2411.16627">
                     <papertitle>Inference-Time Policy Steering through Human Interactions</papertitle>
                 </a><br>
                 <strong>Yanwei Wang</strong>,
@@ -511,7 +511,7 @@
         </div><br>
 
         <div style='text-align: justify; width: 90%; font-size: 15pt; color:#A31F34'>
-            Block Stacking Task - Discrete Ordering Alignment
+            Block Stacking Task - Discrete Task Alignment
             <p></p>
         </div>
         <div>
@@ -587,7 +587,7 @@
         </div><br>
 
         <div style='text-align: justify; width: 90%; font-size: 15pt; color:#A31F34'>
-            Real-World Kitchen Task - Discrete Ordering Alignment
+            Real-World Kitchen Task - Discrete Task Alignment
             <p></p>
         </div>
         <div>
